@@ -38,6 +38,7 @@ class SMOBStore {
 	PREFIX smob: <http://smob.me/ns#>
 	PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
 	PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
+	PREFIX rev: <http://purl.org/stuff/rev#>
 
 		$query";		
 				
